--- a/samples/hello_ar_java/app/src/main/res/layout/activity_main.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,7 @@
       android:id="@+id/surfaceview"
       android:layout_width="fill_parent"
       android:layout_height="fill_parent"
-      android:layout_gravity="top"
-      android:layout_marginTop="-230dp" />
+      android:layout_gravity="top" />
 
   <ImageView
       android:id="@+id/imageView3"
