--- a/samples/hello_ar_java/app/src/main/res/layout/activity_main.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/activity_main.xml
@@ -43,16 +43,21 @@
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
       android:layout_alignParentStart="true"
+      android:layout_marginTop="10dp"
       android:layout_marginStart="10dp"
       android:text="Scanning" />
 
-  <Button
-      android:id="@+id/fireButton"
+  <TextView
+      android:id="@+id/pointsView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentTop="true"
-      android:layout_alignParentEnd="true"
-      android:layout_marginEnd="10dp"
-      android:text="FIRE" />
+      android:layout_alignParentRight="true"
+      android:layout_marginRight="40dp"
+      android:layout_marginTop="10dp"
+      android:textSize="30sp"
+      android:textAlignment="textStart"
+      android:width="200dp"
+      android:text="Points" />
 
 </RelativeLayout>
