--- a/samples/hello_ar_java/app/src/main/res/layout/activity_main_menu.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/activity_main_menu.xml
@@ -20,7 +20,7 @@
         android:id="@+id/customizeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Customize"
+        android:text="@string/customize_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
@@ -32,7 +32,7 @@
         android:id="@+id/settingsButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Settings"
+        android:text="@string/settings_button"
         app:layout_constraintBottom_toBottomOf="@+id/customizeButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.75"
@@ -43,7 +43,7 @@
         android:id="@+id/playButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Play"
+        android:text="@string/play_button"
         android:textAllCaps="true"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="30sp"
