--- a/samples/hello_ar_java/app/src/main/res/layout/activity_main.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/activity_main.xml
@@ -52,37 +52,37 @@
       android:id="@+id/switchButton"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_alignParentTop="true"
       android:layout_alignParentStart="true"
-      android:layout_marginTop="10dp"
+      android:layout_alignParentTop="true"
       android:layout_marginStart="10dp"
-      android:text="Scanning" />
+      android:layout_marginTop="10dp"
+      android:text="@string/scanning_button" />
 
-    <TextView
-        android:id="@+id/pointsView"
-        android:layout_width="152dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="145dp"
-        android:width="200dp"
-        android:text="Points"
-        android:textAlignment="textStart"
-        android:textSize="30sp" />
+  <TextView
+      android:id="@+id/pointsView"
+      android:layout_width="152dp"
+      android:layout_height="wrap_content"
+      android:layout_alignParentTop="true"
+      android:layout_alignParentRight="true"
+      android:layout_marginTop="10dp"
+      android:layout_marginRight="145dp"
+      android:width="200dp"
+      android:text="@string/points_label"
+      android:textAlignment="textStart"
+      android:textSize="30sp" />
 
-    <TextView
-        android:id="@+id/timeView"
-        android:layout_width="152dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="-1dp"
-        android:width="150dp"
-        android:text="Time"
-        android:textAlignment="textStart"
-        android:textSize="30sp" />
+  <TextView
+      android:id="@+id/timeView"
+      android:layout_width="152dp"
+      android:layout_height="wrap_content"
+      android:layout_alignParentTop="true"
+      android:layout_alignParentRight="true"
+      android:layout_marginTop="10dp"
+      android:layout_marginRight="-1dp"
+      android:width="150dp"
+      android:text="@string/time_label"
+      android:textAlignment="textStart"
+      android:textSize="30sp" />
 
 </RelativeLayout>
 
