--- a/samples/hello_ar_java/app/src/main/res/layout/activity_owned_menu.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/activity_owned_menu.xml
@@ -11,30 +11,26 @@
         android:id="@+id/buttonMenu"
         android:layout_width="181dp"
         android:layout_height="48dp"
+        android:text="@string/o_menu_button"
         android:textSize="20dp"
-        android:text="Menu"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"/>
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonShop"
         android:layout_width="194dp"
         android:layout_height="48dp"
+        android:text="@string/o_shop_button"
         android:textSize="20dp"
-        android:text="Shop"
-        tools:layout_editor_absoluteX="201dp"
-        tools:layout_editor_absoluteY="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="24dp"
-        android:text="Owned Customizations"
+        android:text="@string/owned_label"
         android:textSize="35dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/buttonMenu" />
@@ -50,9 +46,9 @@
 
         <TextView
             android:id="@+id/card1"
-            android:layout_height="match_parent"
             android:layout_width="match_parent"
-            android:textSize="30dp"
-            android:text="Customization 1" />
+            android:layout_height="match_parent"
+            android:text="@string/custom_label"
+            android:textSize="30dp" />
     </android.support.v7.widget.CardView>
 </android.support.constraint.ConstraintLayout>
