--- a/samples/hello_ar_java/app/src/main/res/layout/activity_shop.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/activity_shop.xml
@@ -11,19 +11,17 @@
         android:id="@+id/buttonMenu"
         android:layout_width="181dp"
         android:layout_height="48dp"
-        android:text="Menu"
+        android:text="@string/s_menu_button"
         android:textSize="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonMenu2"
         android:layout_width="181dp"
         android:layout_height="48dp"
         android:layout_marginTop="336dp"
-        android:text="Purchase"
+        android:text="@string/purchase_button"
         android:textSize="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -36,7 +34,7 @@
         android:layout_height="48dp"
         android:layout_marginLeft="104dp"
         android:layout_marginTop="640dp"
-        android:text="Purchase"
+        android:text="@string/purchase_button"
         android:textSize="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -45,18 +43,16 @@
         android:id="@+id/buttonShop"
         android:layout_width="194dp"
         android:layout_height="48dp"
-        android:text="Owned Customizations"
+        android:text="@string/s_owned_button"
         android:textSize="20dp"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="201dp"
-        tools:layout_editor_absoluteY="16dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Customization Shop"
+        android:text="@string/shop_label"
         android:textSize="35dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -79,7 +75,7 @@
         android:layout_height="37dp"
         android:layout_marginTop="155dp"
         android:layout_marginEnd="2dp"
-        android:text="$$$"
+        android:text="@string/custom_price1"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -92,7 +88,7 @@
         android:layout_height="37dp"
         android:layout_marginTop="441dp"
         android:layout_marginEnd="2dp"
-        android:text="$$$"
+        android:text="@string/custom_price2"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -104,7 +100,7 @@
         android:layout_width="229dp"
         android:layout_height="39dp"
         android:layout_marginTop="155dp"
-        android:text="Customization 1"
+        android:text="@string/custom_label1"
         android:textSize="30dp"
         app:layout_constraintEnd_toStartOf="@+id/card"
         app:layout_constraintHorizontal_bias="0.5"
@@ -116,7 +112,7 @@
         android:layout_width="229dp"
         android:layout_height="39dp"
         android:layout_marginTop="441dp"
-        android:text="Customization 2"
+        android:text="@string/custom_label2"
         android:textSize="30dp"
         app:layout_constraintEnd_toStartOf="@+id/card4"
         app:layout_constraintHorizontal_bias="0.5"
@@ -128,7 +124,7 @@
         android:layout_width="414dp"
         android:layout_height="105dp"
         android:layout_marginTop="231dp"
-        android:text="Customization 1 Description"
+        android:text="@string/custom_descrip1"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -140,7 +136,7 @@
         android:layout_width="414dp"
         android:layout_height="105dp"
         android:layout_marginTop="535dp"
-        android:text="Customization 2 Description"
+        android:text="@string/custom_descrip2"
         android:textSize="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
