--- a/samples/hello_ar_java/app/src/main/res/layout/activity_settings_menu.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/activity_settings_menu.xml
@@ -33,7 +33,7 @@
         app:layout_constraintTop_toTopOf="@+id/buttonMenu" />
 
     <SeekBar
-        android:id="@+id/seekBar"
+        android:id="@+id/seekVolume"
         android:layout_width="252dp"
         android:layout_height="53dp"
         android:layout_marginBottom="328dp"
