--- a/samples/hello_ar_java/app/src/main/res/layout/activity_settings_menu.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/activity_settings_menu.xml
@@ -12,6 +12,7 @@
         android:id="@+id/buttonMenu"
         android:layout_width="181dp"
         android:layout_height="48dp"
+        android:fontFamily="@font/space_font_ttf"
         android:text="Menu"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -24,6 +25,7 @@
         android:id="@+id/textTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/space_font_ttf"
         android:text="Settings"
         android:textColor="@android:color/white"
         android:textSize="35dp"
@@ -48,8 +50,9 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="90dp"
-        android:layout_height="39dp"
+        android:layout_width="114dp"
+        android:layout_height="30dp"
+        android:fontFamily="@font/space_font_ttf"
         android:text="Volume"
         android:textColor="@android:color/white"
         android:textSize="24sp"
@@ -63,6 +66,7 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/space_font_ttf"
         android:text="Restore Purchases"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
