--- a/samples/hello_ar_java/app/src/main/res/layout/activity_scoreboard.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/activity_scoreboard.xml
@@ -8,13 +8,13 @@
     tools:context=".ScoreboardActivity">
 
     <TextView
-        android:textColor="@android:color/white"
         android:id="@+id/scoreTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="HIGH SCORES"
         android:fontFamily="@font/space_font_ttf"
+        android:text="HIGH SCORES"
         android:textAllCaps="true"
+        android:textColor="@android:color/white"
         android:textSize="36sp"
         app:layout_constraintBottom_toTopOf="@+id/list"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,91 +23,85 @@
 
     <ListView
         android:id="@+id/list"
-        android:layout_width="236dp"
-        android:layout_height="302dp"
+        android:layout_width="241dp"
+        android:layout_height="224dp"
         app:layout_constraintBottom_toBottomOf="@id/scoreTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="53dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:textColor="@android:color/white"
         android:id="@android:id/empty"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="NO DATA"
+        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/save"
-        android:fontFamily="@font/space_font_ttf"
+    <EditText
+        android:id="@+id/initials"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
-        android:padding="5dp"
-        android:text="Save Score"
+        android:fontFamily="@font/space_font_ttf"
+        android:hint="Enter initials"
+        app:layout_constraintBottom_toTopOf="@+id/save"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/time"
-        app:layout_constraintTop_toBottomOf="@+id/list" />
+        app:layout_constraintHorizontal_bias="0.866"
+        app:layout_constraintStart_toEndOf="@+id/scoreText"
+        app:layout_constraintTop_toBottomOf="@+id/list"
+        app:layout_constraintVertical_bias="0.71" />
 
     <Button
         android:id="@+id/clear"
-
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:fontFamily="@font/space_font_ttf"
         android:padding="5dp"
         android:text="Clear Scoreboard"
-        android:fontFamily="@font/space_font_ttf"
         app:layout_constraintBottom_toTopOf="@+id/mainMenuButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/time" />
+        app:layout_constraintTop_toBottomOf="@+id/time"
+        app:layout_constraintVertical_bias="0.566" />
 
-    <EditText
-        android:id="@+id/initials"
-        android:fontFamily="@font/space_font_ttf"
+    <Button
+        android:id="@+id/save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
-        android:hint="Enter initials"
-
-
-        app:layout_constraintBottom_toTopOf="@+id/save"
+        android:layout_marginTop="124dp"
+        android:fontFamily="@font/space_font_ttf"
+        android:padding="5dp"
+        android:text="Save Score"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.82"
-        app:layout_constraintStart_toEndOf="@+id/scoreText"
-        app:layout_constraintTop_toBottomOf="@+id/list"
-        app:layout_constraintVertical_bias="0.309" />
-
-    <TextView
-        android:id="@+id/scoreText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@android:color/white"
-        android:text="YOUR SCORE"
-        android:fontFamily="@font/space_font_ttf"
-        app:layout_constraintBottom_toBottomOf="@+id/timeText"
-        app:layout_constraintEnd_toStartOf="@+id/score"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/score"
-        app:layout_constraintVertical_bias="0.142" />
+        app:layout_constraintStart_toEndOf="@+id/time"
+        app:layout_constraintTop_toBottomOf="@+id/list" />
 
     <TextView
         android:id="@+id/score"
         android:layout_width="85dp"
         android:layout_height="27dp"
-        android:textColor="@android:color/white"
         android:textAlignment="center"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/save"
         app:layout_constraintEnd_toStartOf="@+id/initials"
         app:layout_constraintStart_toEndOf="@+id/scoreText"
         app:layout_constraintTop_toBottomOf="@+id/list"
-        app:layout_constraintVertical_bias="0.509" />
+        app:layout_constraintVertical_bias="0.731" />
+
+    <Button
+        android:id="@+id/mainMenuButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="132dp"
+        android:fontFamily="@font/space_font_ttf"
+        android:text="Main Menu"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/save" />
 
     <TextView
         android:id="@+id/timeText"
@@ -117,34 +111,58 @@
         android:text="YOUR TIME"
         android:textColor="@android:color/white"
         app:layout_constraintEnd_toStartOf="@+id/time"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/time" />
+
+    <TextView
+        android:id="@+id/targetsText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/space_font_ttf"
+        android:text="Num targets"
+        android:textColor="@android:color/white"
+        app:layout_constraintEnd_toStartOf="@+id/targets"
+        app:layout_constraintHorizontal_bias="0.695"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/targets" />
 
     <TextView
         android:id="@+id/time"
         android:layout_width="83dp"
         android:layout_height="28dp"
+        android:layout_marginTop="16dp"
+        android:textColor="@android:color/white"
+        app:layout_constraintBottom_toTopOf="@+id/targets"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.362"
+        app:layout_constraintStart_toStartOf="@+id/scoreText"
+        app:layout_constraintTop_toBottomOf="@+id/score"
+        app:layout_constraintVertical_bias="0.0" />
 
+    <TextView
+        android:id="@+id/targets"
+        android:layout_width="83dp"
+        android:layout_height="28dp"
+        android:layout_marginEnd="47dp"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toTopOf="@+id/mainMenuButton"
-        app:layout_constraintEnd_toStartOf="@+id/initials"
-        app:layout_constraintHorizontal_bias="0.478"
-        app:layout_constraintStart_toEndOf="@+id/timeText"
+        app:layout_constraintEnd_toStartOf="@+id/save"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/score"
-        app:layout_constraintVertical_bias="0.126" />
+        app:layout_constraintVertical_bias="0.342" />
 
-    <Button
-        android:id="@+id/mainMenuButton"
+    <TextView
+        android:id="@+id/scoreText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="144dp"
-        android:text="Main Menu"
         android:fontFamily="@font/space_font_ttf"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        android:text="YOUR SCORE"
+        android:textColor="@android:color/white"
+        app:layout_constraintEnd_toStartOf="@+id/score"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/save" />
+        app:layout_constraintTop_toTopOf="@+id/score" />
 
 
 </android.support.constraint.ConstraintLayout>
