--- a/samples/hello_ar_java/app/src/main/res/layout/row_item.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/row_item.xml
@@ -31,5 +31,15 @@
             android:paddingLeft="20dp"
             android:textColor="#0022ff"
             android:id="@+id/highTime" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/space_font_ttf"
+
+            android:text="Empty File"
+            android:paddingLeft="20dp"
+            android:textColor="#0022ff"
+            android:id="@+id/numTargets" />
     </LinearLayout>
 </LinearLayout>
