--- a/samples/hello_ar_java/app/src/main/res/layout/activity_owned_menu.xml
+++ b/samples/hello_ar_java/app/src/main/res/layout/activity_owned_menu.xml
@@ -41,21 +41,15 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/buttonMenu" />
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="16dp"
+    <ListView
+        android:id="@+id/listView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textTitle"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toBottomOf="@+id/textTitle">
 
         <include layout="@layout/customizationitem" />
 
-    </android.support.v7.widget.RecyclerView>
+    </ListView>
 
 </android.support.constraint.ConstraintLayout>
